<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.steven.koekenbestellen.NieuweBestellingActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/voornaam"
            android:id="@+id/edit_voornaam"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/naam"
            android:id="@+id/edit_naam"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aflevering"
            android:id="@+id/edit_aflevering"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gsm"
            android:id="@+id/edit_gsm"
            android:layout_marginBottom="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:phoneNumber="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="9dp"
                android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choco"
                android:layout_marginBottom="2dp"
                />
            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/npicker_choco"

                >
                </NumberPicker>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="9dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vanille"
                    android:layout_marginBottom="2dp"
                    />
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/npicker_vanille"
                    >
                </NumberPicker>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/franchi"
                    android:layout_marginBottom="2dp"
                    />
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/npicker_franchi"
                    >
                </NumberPicker>
            </LinearLayout>
            </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/te_betalen"
            android:layout_marginTop="7dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totaal"
                android:layout_marginRight="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/txt_bestelling_totaal_aantal"
                android:layout_marginRight="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x 6euro = "
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:id="@+id/txt_totaal_prijs"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="euro"
                android:textStyle="bold"/>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/betaald"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_betaald"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Annuleer"
                android:id="@+id/btn_annuleer"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_opslaan"
                android:text="@string/opslaan"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>
