<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/wafels"
        android:layout_marginBottom="12dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vanille"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:id="@+id/txtvanilleaantal"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/choco"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:id="@+id/txtchocoaantal"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/franchi"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:id="@+id/txtfranchiaantal"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="------------------------"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="------------------------"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/totaal"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/txttotaalaantal"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nieuwe"
                android:id="@+id/btn_nieuwe_bestelling"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overzicht"
                android:id="@+id/btn_overzicht"
                android:layout_weight="1"/>
            </LinearLayout>

    </LinearLayout>


    </LinearLayout>

</RelativeLayout>
